<resources>
    <string name="app_name">єКомуналка</string>
    <string name="title_home">Головна</string>
    <string name="title_notifications">Нагадування</string>
    <string name="title_settings">Налаштування</string>
    <string name="information">Інформація</string>
    <string name="version">1.1.0.0</string>
    <string name="about_title_settings">Про застосунок</string>
    <string name="record_current">Поточні показання</string>
    <string name="record_previous">Попередні показання</string>
    <string name="save">Зберегти</string>
    <string name="choose_service">Оберіть тип послуги</string>
    <string name="comment">Коментар (не обов\'язково)</string>
    <string name="paid">Сплачено</string>
    <string name="water">Вода</string>
    <string name="gas">Газ</string>
    <string name="electricity">Електроенергія</string>
    <string name="add_new_record_desc">Додати новий запис</string>
    <string name="add_new_notification_desc">Додати нове нагадування</string>
    <string name="add_new_tariff_desc">Додати новий тариф</string>
    <string name="sum">Сума:</string>
    <string name="sum_value">%.2f грн</string>
    <string name="name">Назва</string>
    <string name="price">Ціна за одинию</string>
    <string name="yes">Так</string>
    <string name="cancel">Закрити</string>
    <string name="tariffs">Тарифи</string>
    <string name="tariff_price">%s грн за одиницю</string>
    <string name="empty">Тут поки що нічого немає…</string>
    <string name="description">Опис</string>
    <string name="remindEvery">Повторювати кожного числа</string>
    <string name="remindEveryNDay">Нагадати %s числа кожного місяця</string>
    <string name="for_transportation">За транспортування (не обов\'язково)</string>
</resources>